# GreenWithEnvy2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  build.sh  dev.txt  flatpak_run.sh  meson.build  meson_options.txt  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.pycharm/: gwe
data/: com.leinardi.gwe.appdata.xml  gwe.desktop.in  gwe.gresource.xml.in  gwe.gschema.xml.in  gwe.service.desktop.in  gwe.service.in  io.github.sir-maniac.gwe2.desktop.in  io.github.sir-maniac.gwe2.gresource.xml  io.github.sir-maniac.gwe2.gschema.xml  io.github.sir-maniac.gwe2.service.in  io.github.sir_maniac.gwe2.appdata.xml  io.github.sir_maniac.gwe2.desktop.in  io.github.sir_maniac.gwe2.gschema.xml  io.github.sir_maniac.gwe2.service.desktop  meson.build
data/icons/: render-bitmaps.py
data/ui/: main.glade
debian/: changelog  control  copyright  rules
doc/: development-environment.md
gwe/: __main__.py  app.py  conf.py  di.py
gwe/graph/: graph_column.py  graph_model.py  graph_renderer.py  graph_view.py
gwe/model/: clocks.py  current_fan_profile.py  current_overclock_profile.py  fan.py  fan_profile.py  gpu_status.py  graph_column.py  graph_model.py  info.py  overclock.py  overclock_profile.py  power.py  setting.py  speed_step.py  status.py  sys_paths.py  temp.py
gwe/presenter/: edit_fan_profile_presenter.py  historical_data_presenter.py  main_presenter.py  preferences_presenter.py
gwe/repository/: nvidia_repository.py
gwe/util/: desktop_entry.py  log.py  view.py
gwe/view/: edit_fan_profile_view.py  edit_overclock_profile_view.py  fan_profile_chart.py  graph_stacked_renderer_view.py  historical_data_view.py  main_view.py  preferences_view.py
gwe/view/widget/: graph_renderer.py  graph_view.py
scripts/: generate_requirements.py  make_local_manifest.py  meson_post_install.py
tests/gwe/graph/: test_graph_column.py  test_graph_model.py
tests/gwe/model/: test_graph_column.py  test_graph_model.py
